--- a/ShoeStore/ProductEditWindow.xaml
+++ b/ShoeStore/ProductEditWindow.xaml
@@ -210,11 +210,36 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Имя файла фото:" Style="{StaticResource LabelStyle}"/>
                     <TextBox Grid.Column="1" 
                              Text="{Binding Photo}"
-                             Style="{StaticResource TextBoxStyle}"/>
+                             Style="{StaticResource TextBoxStyle}"
+                             IsReadOnly="True"/>
+                    <Button Grid.Column="2" 
+                            Content="Выбрать..." 
+                            Click="SelectPhotoButton_Click"
+                            Padding="10 5"
+                            Margin="5"/>
+                </Grid>
+
+                <!-- Предпросмотр фото -->
+                <Grid Visibility="{Binding PhotoPreviewVisibility}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Предпросмотр:" Style="{StaticResource LabelStyle}"/>
+                    <Border Grid.Column="1" 
+                            BorderBrush="#CCCCCC" 
+                            BorderThickness="1"
+                            Margin="0,5,0,5"
+                            Width="150" 
+                            Height="150">
+                        <Image Source="{Binding PhotoPreview}"
+                               Stretch="Uniform"/>
+                    </Border>
                 </Grid>
             </StackPanel>
         </ScrollViewer>
